Task5/applied-policies-dump.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"admin-api-from-admin-front-end-ingress","namespace":"prop-network"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"role":"admin-front-end"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"role":"admin-back-end-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: admin-api-from-admin-front-end-ingress
    namespace: prop-network
    resourceVersion: "1063"
    uid: 8cb31a82-46fe-4665-99ba-40d02fdbf697
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: admin-front-end
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        role: admin-back-end-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"admin-api-to-admin-front-end-egress","namespace":"prop-network"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"role":"admin-front-end"}}}]}],"podSelector":{"matchLabels":{"role":"admin-back-end-api"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: admin-api-to-admin-front-end-egress
    namespace: prop-network
    resourceVersion: "1064"
    uid: d25f8d7d-ec83-485a-93fe-f5594bf40924
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            role: admin-front-end
    podSelector:
      matchLabels:
        role: admin-back-end-api
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"admin-front-end-from-admin-api-ingress","namespace":"prop-network"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"role":"admin-back-end-api"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"role":"admin-front-end"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: admin-front-end-from-admin-api-ingress
    namespace: prop-network
    resourceVersion: "1065"
    uid: 9bac054b-8939-4037-a90c-8a597b077a10
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: admin-back-end-api
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        role: admin-front-end
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"admin-front-end-to-admin-api-egress","namespace":"prop-network"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"role":"admin-back-end-api"}}}]}],"podSelector":{"matchLabels":{"role":"admin-front-end"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: admin-front-end-to-admin-api-egress
    namespace: prop-network
    resourceVersion: "1062"
    uid: 7aacd5e7-a4f2-431c-8303-86605f26c048
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            role: admin-back-end-api
    podSelector:
      matchLabels:
        role: admin-front-end
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"allow-dns","namespace":"prop-network"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: allow-dns
    namespace: prop-network
    resourceVersion: "1057"
    uid: d9f52b6e-be11-43f9-95ef-343c1c8115c7
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"back-end-api-from-front-end-ingress","namespace":"prop-network"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"role":"front-end"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"role":"back-end-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: back-end-api-from-front-end-ingress
    namespace: prop-network
    resourceVersion: "1059"
    uid: 19230bc4-31db-4c1d-bc1f-dea18ae37003
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: front-end
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        role: back-end-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"back-end-api-to-front-end-egress","namespace":"prop-network"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"role":"front-end"}}}]}],"podSelector":{"matchLabels":{"role":"back-end-api"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: back-end-api-to-front-end-egress
    namespace: prop-network
    resourceVersion: "1060"
    uid: cce3de6a-70fd-45af-b101-548c82981111
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            role: front-end
    podSelector:
      matchLabels:
        role: back-end-api
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"default-deny-all","namespace":"prop-network"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: default-deny-all
    namespace: prop-network
    resourceVersion: "1055"
    uid: c7a04a85-433c-4a79-9f6e-889d1138127d
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"front-end-from-back-end-api-ingress","namespace":"prop-network"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"role":"back-end-api"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"role":"front-end"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: front-end-from-back-end-api-ingress
    namespace: prop-network
    resourceVersion: "1061"
    uid: 698df1e5-480e-4f42-977b-f3f525cef3c9
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: back-end-api
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        role: front-end
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"project":"propdevelopment","task":"5"},"name":"front-end-to-back-end-api-egress","namespace":"prop-network"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"role":"back-end-api"}}}]}],"podSelector":{"matchLabels":{"role":"front-end"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-05-10T13:40:39Z"
    generation: 1
    labels:
      project: propdevelopment
      task: "5"
    name: front-end-to-back-end-api-egress
    namespace: prop-network
    resourceVersion: "1058"
    uid: 33cd1cde-a2e7-4e8d-af7a-9b085d2e5bef
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            role: back-end-api
    podSelector:
      matchLabels:
        role: front-end
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
